curator/meilisearch/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meilisearch-ingress
  namespace: curator
  labels:
    app: meilisearch
    app.kubernetes.io/instance: meilisearch
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: meilisearch
    app.kubernetes.io/part-of: meilisearch
    helm.sh/chart: meilisearch-0.4.3
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # If you're using cert-manager for TLS certificates
spec:
  ingressClassName: traefik
  rules:
    - host: search.curator.atemkeng.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: meilisearch
                port:
                  number: 7700
  tls: # Remove this section if you're not using HTTPS
    - hosts:
        - search.curator.atemkeng.eu
      secretName: meilisearch-tls
